# softnpu

./: Cargo.toml  README.md
.cargo/: config.toml
.github/buildomat/: config.toml
.github/buildomat/jobs/: build-and-test.sh
client/: Cargo.toml
client/src/: cli.rs  config.rs  lib.rs  p9.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: cli.rs  config.rs  lib.rs  mgmt.rs  p9.rs
