[workspace]
resolver = "2"

members = [
  "lib",
  "client",
]

[workspace.dependencies]
softnpu = { path = "lib" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["sync", "net"] }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "unstable-styles"] }
devinfo = { git = "https://github.com/oxidecomputer/devinfo-sys", branch = "main" }
dlpi = { git = "https://github.com/oxidecomputer/dlpi-sys", branch = "main" }
indicatif = "0.18.0"
libc = "0.2.175"
libloading = "0.8.9"
p9ds = { git = "https://github.com/oxidecomputer/p9fs", branch = "main" }
p9kp = { git = "https://github.com/oxidecomputer/p9fs", branch = "main" }
slog = "2.7.0"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.2"
toml = "0.9.7"
anstyle = "1.0.11"
zone = "0.3.1"
ztest = { git = "https://github.com/oxidecomputer/falcon" }
curl = "0.4.49"
octocrab = "0.45"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
p4rs = { git = "https://github.com/oxidecomputer/p4", branch = "main" }
sha256 = "1.6.0"
