[workspace]
resolver = "2"

members = [
  "lib",
  "client",
]

[workspace.dependencies]
softnpu = { path = "lib" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["sync", "net"] }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "unstable-styles"] }
devinfo = { git = "https://github.com/oxidecomputer/devinfo-sys", branch = "main" }
dlpi = { git = "https://github.com/oxidecomputer/dlpi-sys", branch = "main" }
indicatif = "0.18.3"
libc = "0.2.178"
libloading = "0.8.9"
p9ds = { git = "https://github.com/oxidecomputer/p9fs", branch = "main" }
p9kp = { git = "https://github.com/oxidecomputer/p9fs", branch = "main" }
slog = "2.8.2"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.2"
toml = "0.9.8"
anstyle = "1.0.13"
zone = "0.3.1"
ztest = { git = "https://github.com/oxidecomputer/falcon" }
curl = "0.4.49"
octocrab = "0.48"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
p4rs = { git = "https://github.com/oxidecomputer/p4", branch = "main" }
sha256 = "1.6.0"
