[package]
name = "softnpu-client"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "softnpu"
test = false
doctest = false

[[bin]]
name = "npuzone"
test = false
doctest = false

[dependencies]
softnpu.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

anyhow.workspace = true
clap.workspace = true
devinfo.workspace = true
dlpi.workspace = true
indicatif.workspace = true
libc.workspace = true
libloading.workspace = true
p9ds.workspace = true
p9kp.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-term.workspace = true
toml.workspace = true
anstyle.workspace = true
zone.workspace = true
ztest.workspace = true
curl.workspace = true
octocrab.workspace = true
libnet.workspace = true
sha256.workspace = true
